# housing-gpa

./: .bazelrc  .env.secret  .gitignore  .pre-commit-config.yaml  BUILD.bazel  README.md  WORKSPACE  WORKSPACE.bazel  deps.bzl  package.json  requirements.txt  skaffold.yaml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
backend/: .gitignore  BUILD.bazel  go.mod  go.sum  gqlgen.yml  manage.py  readme.md  server.go
backend/ent/: client.go  ent.go  entc.go  mutation.go  node.go  pagination.go  user.go  user_create.go  user_delete.go  user_query.go  user_update.go
backend/ent/enttest/: enttest.go
backend/ent/hook/: hook.go
backend/ent/migrate/: schema.go
backend/ent/runtime/: runtime.go
backend/ent/schema/: BUILD.bazel  user.go
backend/ent/user/: user.go  where.go
backend/graph/: BUILD.bazel  resolver.go  schema.graphqls  schema.resolvers.go
backend/graph/model/: BUILD.bazel  models_gen.go
backend/graph/schema/: BUILD.bazel  interfaces.graphql  mutations.resolvers.go  property.graphql  queries.graphql  queries.resolvers.go  resolver.go  user.graphql  user.resolvers.go
backend/server/: BUILD.bazel  settings.py
frontend/: BUILD.bazel  package-lock.json
k8s/: backend-deployment.yaml  frontend-deployment.yaml
old-backend/: .env.development  package.json
old-backend/migrations/: current.sql
scripts/: BUILD.bazel  scan_post.py  scrape_fb.py
scripts/common/: BUILD.bazel  types.py
scripts/gpt3/: BUILD.bazel  gpt3-template.mustache
