load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
# load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_binary(
  name = "backend",
  srcs = ["main.go"],
  importpath = "github.com/davidmcnamee/student-housing-backend/backend",
  deps = ["@com_github_graphql_go_graphql//:go_default_library"],
)
