load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_binary(
  name = "frontend",
  entry_point = "@npm//:node_modules/preact-cli/lib/index.js",
  chdir = "frontend",
  templated_args = ["watch"],
  data = glob(["src/**"]) + [
    "tsconfig.json",
    "@npm//preact",
    "@npm//preact-render-to-string",
    "@npm//preact-router",
    "@npm//preact-cli",
    "@npm//typescript",
  ],
)

nodejs_image(
    name = "image",
    entry_point = "@npm//:node_modules/preact-cli/lib/index.js",
    chdir = "frontend",
    templated_args = ["build"],
    data = glob(["src/**"]) + [
      "tsconfig.json",
      "@npm//preact",
      "@npm//preact-render-to-string",
      "@npm//preact-router",
      "@npm//preact-cli",
    ],
)
