load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")

nodejs_image(
    name = "image",
    chdir = "frontend",
    data = glob(["src/**"]) + [
        "package.json",
        "tsconfig.json",
        "@npm//preact",
        "@npm//preact-render-to-string",
        "@npm//preact-router",
        # "@npm//@types/enzyme",
        # "@npm//@types/jest",
        # "@npm//@typescript-eslint/eslint-plugin",
        # "@npm//@typescript-eslint/parser",
        # "@npm//enzyme",
        # "@npm//enzyme-adapter-preact-pure",
        # "@npm//eslint",
        # "@npm//eslint-config-preact",
        # "@npm//jest",
        # "@npm//jest-preset-preact",
        "@npm//preact-cli",
        # "@npm//sirv-cli",
        "@npm//typescript",
    ],
    entry_point = "@npm//:node_modules/preact-cli/lib/index.js",
    templated_args = ["watch"],
)
