load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "graph",
    srcs = [
        "resolver.go",
        "schema.resolvers.go",
    ],
    importpath = "github.com/davidmcnamee/student-housing-backend/graph",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/graph/generated",
        "//backend/graph/model",
    ],
)
