load("@rules_python//python:defs.bzl", "py_library")
load("@pip//:requirements.bzl", "requirement")

py_library(
  name = "gpt3",
  deps = ["//scripts/common"],
  srcs = [
    "scan_post.py",
    requirement("python-dotenv"),
    requirement("chevron"),
  ],
  data = [
    "//:env",
    "gpt3-template.mustache",
  ],
  visibility = ["//visibility:public"],
)
